2005-09-28  H.J. Lu  <hongjiu.lu@intel.com>

	* elflink.c (elf_fixup_link_order): Report locations for mixed
	ordered and unordered input sections.

2005-09-22  James E. Wilson  <wilson@specifix.com>

	* dwarf2.c (struct funcinfo): Delete nesting_level field.
	(lookup_address_in_function_table): Delete code to set funcinfo
	caller_func field.  Delete local curr_func.
	(scan_unit_for_symbols): New locals nested_funcs, nested_funcs_size.
	Delete code setting funcinfo nesting_level field.  Add code to set
	funcinfo caller_func field.
	
2005-09-20  James E. Wilson  <wilson@specifix.com>

	* dwarf2.c (find_abstract_instance_name): Don't early exit when name
	set.  For DW_AT_name case, only set name if not already set.  Handle
	DW_AT_MIPS_linkage_name.

2005-09-20  Alan Modra  <amodra@bigpond.net.au>

	* elflink.c (_bfd_elf_merge_symbol): Simplify.

2005-09-19  Alan Modra  <amodra@bigpond.net.au>

	* elf64-ppc.c (ppc_build_one_stub): Replace assertion that long
	branch offset is in range with an error.  Print full stub name on
	errors.
	(ppc_size_one_stub): Print full stub name on errors.
	(group_sections): Warn if section size exceeds group size.
	(ppc64_elf_size_stubs): Continue relaxing when stub types change.

2005-09-09  Kevin Buettner  <kevinb@redhat.com>

	* elf32-am33lin.c (bfd.h, sysdep.h, elf-bfd.h, elf/mn10300.h):
	Include.
	(elf32_am33lin_grok_prstatus, elf32_am33lin_grok_psinfo): New
	functions.
	(elf_backend_grok_prstatus, elf_backend_grok_psinfo): Define.

2005-09-09  Richard Earnshaw  <richard.earnshaw@arm.com>

	* elf32-arm.c (elf32_arm_section_from_shdr): Accept SHT_ARM_PREEMPTMAP
	and SHT_ARM_ATTRIBUTES.

2005-09-08  H.J. Lu  <hongjiu.lu@intel.com>

	* elflink.c (elf_get_linked_section_vma): Fix a typo in comment.
	* elfxx-ia64.c (elf_backend_link_order_error_handler): Likewise.

2005-09-08  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/1263
	* elflink.c (elf_link_add_object_symbols): Abort for
	--just-symbols on DSO.
